fix: add anchorScrolling option to router configuration and set z-index for landing page layout

--- a/src/app/main-page/landing-page/landing-page.scss
+++ b/src/app/main-page/landing-page/landing-page.scss
@@ -37,6 +37,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 25;
         >p {
             font-size: 40px;
             font-family: 'Fira Code';
